# bazel-ruby-gen

./: Dockerfile  README.md  WORKSPACE  docker-entrypoint.sh  on building ruby.txt  rundocker.sh
prebuilt/: pack_prebuilt_ruby.sh
repo_rules/: BUILD  rainbow.bzl  ruby.bzl  ruby_binaries.bzl  ruby_gems.bzl  ruby_srcs.bzl
ruby/: BUILD  gems_check_gemfile.bzl  ruby_binary.bzl  ruby_gem_library.bzl  ruby_library_info.bzl  ruby_nokogiri.bzl  ruby_sources_versions.bzl  run_ruby_binaries.bzl
ruby/private/: BUILD.bazel  c_context.bzl  context.bzl  providers.bzl  ruby_context.bzl
ruby/templates/: exec_template.bzl
srcs/: BUILD  BUILD.bazel  hello_ruby_lib.rb  hello_world.rb
srcs/gemmed/: BUILD  BUILD.bazel  README.md
srcs/gemmed/gemchain/: gemchain-terminal-table.rb  gemchain-uiux.rb
srcs/gemmed/multigem/: multigem.rb
srcs/nativeext/: BUILD.bazel
srcs/nativeext/jaro_winkler/: next_jaro_winkler.rb
srcs/nativeext/lib_ffi/: lib_ffi.rb
srcs/noko/: BUILD.bazel  noko_wrapper.rb  nokogiri.rb
srcs/rubygems/: BUILD.bazel  rubygems_test.rb  rubygems_wrap.rb
srcs/rubygems/folder_gemswrap/: rubygems_wrap_foldered.rb
