load(":context.bzl", "cgo_context_data")

filegroup(
    name = "all_rules",
    srcs = glob(["**/*.bzl"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

cgo_context_data(
    name = "cgo_context_data",
    visibility = ["//visibility:public"],
)