load ("//ruby:ruby_binary.bzl", "ruby_binary")
load ("//ruby:ruby_gem_library.bzl", "ruby_gem_library")

#noko
ruby_binary(
  name = "noko_sh",
  entrypoint = ":nokogiri.rb",
  deps =[":lib_noko"],
)

#lib_noko
ruby_gem_library(
  name = "lib_noko",
  gem_name = "nokogiri",
  srcs = ["@nokogiri//:gem_filegroup"],
  deps = [":lib_mini_portile2"],
  lib_roots = "@nokogiri//:gem_libroots",
  ext_confs = "@nokogiri//:gem_extconfs",
)

#lib_mini_portile2
ruby_gem_library(
  name = "lib_mini_portile2",
  gem_name = "mini_portile2",
  srcs = ["@mini_portile2//:gem_filegroup"],
  lib_roots = "@mini_portile2//:gem_libroots",
  ext_confs = "@mini_portile2//:gem_extconfs",
)

