load ("//ruby:ruby_binary.bzl", "ruby_binary")
load ("//ruby:ruby_gem_library.bzl", "ruby_gem_library")

ruby_binary(
  name = "rubygems_sh",
  entrypoint = ":rubygems_wrap.rb",
  srcs = [":rubygems_test.rb"],
)

ruby_binary(
  name = "rubygems_foldered_sh",
  entrypoint = ":folder_gemswrap/rubygems_wrap_foldered.rb",
  srcs = [":folder_gemstest/rubygems_test_foldered.rb"],
)

ruby_binary(
  name = "rubygems_nowrap_sh",
  entrypoint = ":rubygems_test.rb",
)

# #lib_mini_portile2
# ruby_gem_library(
#   name = "lib_mini_portile2",
#   gem_name = "mini_portile2",
#   srcs = ["@mini_portile2//:gem_filegroup"],
#   lib_roots = "@mini_portile2//:gem_libroots",
#   ext_confs = "@mini_portile2//:gem_extconfs",
# )
